# text-utility

./: .gitattributes  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-update.yml
tests/: test_find_gtins.py
tests/res/find_gtins/: 001.4
text_utility/: __init__.py  gtin.py
