[project]
name = "text-utility"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
keywords = [
    "text",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "gtin>=1.3.1649173518",
]

[project.urls]
repository = "https://github.com/la-catalog/text-utility"

[tool.pdm]

[tool.pdm.scripts]
tests = "python -m unittest discover -v -f -s tests"
sort = "python -m isort -v --ac ."

[tool.pdm.dev-dependencies]
lint = [
    "black",
    "isort"
]

# [[tool.pdm.source]]
# url = "https://private-site.org/pypi/simple"
# verify_ssl = false
# name = "lacatalog"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
