[project]
name = "text-utility"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
dependencies = [
    "gtin==1.3.1649173518",
]

[project.urls]
repository = "https://github.com/la-catalog/text-utility"

[project.optional-dependencies]
[tool.pdm]

[tool.pdm.scripts]
unittest = "python -m unittest discover -v -f -s tests"
black = "python -m black ."
isort = "python -m isort -v --ac ."

[tool.pdm.dev-dependencies]
lint = [
    "black==22.10.0",
    "isort==5.10.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

# [[tool.pdm.source]]
# url = "https://private-site.org/pypi/simple"
# verify_ssl = false
# name = "lacatalog"